--- a/you-kan.UI/ClientApp/src/app/tasks/components/task-detail/task-detail.component.css
+++ b/you-kan.UI/ClientApp/src/app/tasks/components/task-detail/task-detail.component.css
@@ -7,6 +7,11 @@
     width: 430px;
 }
 
+.comment-input{
+    padding: 5px;
+    width: 550px;
+}
+
 .dialog {
     height: 700px;
     width: 700px;
