--- a/you-kan.UI/ClientApp/src/app/dashboard/dashboard.component.css
+++ b/you-kan.UI/ClientApp/src/app/dashboard/dashboard.component.css
@@ -24,6 +24,7 @@ mat-sidenav-content {
   }
 
   .toolbar {
+    padding: 15px;
     background-image: linear-gradient(to left, rgba(255,0,0,0), rgb(64, 4, 117));
     ; 
   } 
