--- a/you-kan.UI/ClientApp/src/app/projects/components/project-detail/project-detail.component.html
+++ b/you-kan.UI/ClientApp/src/app/projects/components/project-detail/project-detail.component.html
@@ -4,7 +4,7 @@
 <mat-card>
     <mat-card-content class="project-details">
         <div>
-            <form [formGroup]="projectForm" (ngSubmit)="onSubmit()">
+            <form [formGroup]="projectForm">
                 <mat-form-field class="basic-input">
                     <mat-label>Name</mat-label>
                     <input matInput formControlName="project_name">
@@ -48,7 +48,7 @@
         </div>
 
         <div class="actions-bar">
-            <button mat-raised-button color="primary" type="submit" [disabled]="projectForm.invalid">Save</button>
+            <button mat-raised-button color="primary" type="submit" (click)="onSubmit()" [disabled]="projectForm.invalid">Save</button>
             <button mat-button type="button" (click)="onCancel()">Cancel</button>
         </div>
 
