--- a/you-kan.UI/ClientApp/src/app/projects/components/project-detail/project-detail.component.css
+++ b/you-kan.UI/ClientApp/src/app/projects/components/project-detail/project-detail.component.css
@@ -26,3 +26,9 @@
     padding-top: 10px;
     align-self: flex-end;
 }
+
+.sprints-header {
+    display: flex;
+    flex-direction: row;
+    gap: 20px
+}
