--- a/you-kan.UI/ClientApp/src/app/projects/components/project-detail/project-detail.component.html
+++ b/you-kan.UI/ClientApp/src/app/projects/components/project-detail/project-detail.component.html
@@ -32,7 +32,12 @@
         </div>
 
         <div>
-                <p style="font-size:large;">Sprints:</p>
+            <div class="sprints-header">
+                <p style="font-size:large;padding-top:5px;">Sprints:</p>
+                <button mat-icon-button (click)="addSprint()">
+                    <mat-icon>add</mat-icon>
+                </button>
+            </div>
             <mat-list>
                 @for (sprint of project.sprints; track sprint.sprint_id) {
                 <mat-list-item>
@@ -48,7 +53,8 @@
         </div>
 
         <div class="actions-bar">
-            <button mat-raised-button color="primary" type="submit" (click)="onSubmit()" [disabled]="projectForm.invalid">Save</button>
+            <button mat-raised-button color="primary" type="submit" (click)="onSubmit()"
+                [disabled]="projectForm.invalid">Save</button>
             <button mat-button type="button" (click)="onCancel()">Cancel</button>
         </div>
 
