Implemented Edit/Delete for users page, created base sign up/login pages.

--- a/you-kan.UI/ClientApp/src/app/dashboard/dashboard.component.html
+++ b/you-kan.UI/ClientApp/src/app/dashboard/dashboard.component.html
@@ -19,6 +19,7 @@
                 <li><a routerLink="/projects" mat-button>Projects</a></li>
                 <li><a routerLink="/users" mat-button>Users</a></li>
                 <li><a routerLink="/login" mat-button>Login</a></li>
+                <li><a routerLink="/sign-up" mat-button>Sign Up</a></li>
             </mat-nav-list>
         </mat-sidenav>
 
