--- a/you-kan.UI/ClientApp/src/app/user-management/components/login/login.component.html
+++ b/you-kan.UI/ClientApp/src/app/user-management/components/login/login.component.html
@@ -1,12 +1,18 @@
-<div>
-    <h2>Login</h2>
-    <form (onLogin)="onLogin()">
-      <label for="username">Username:</label>
-      <input type="text" id="username" [(ngModel)]="username" name="username" required>
-  
-      <label for="password">Password:</label>
-      <input type="password" id="password" [(ngModel)]="password" name="password" required>
-  
-      <button type="submit">Login</button>
+<h3 mat-dialog-title>Login</h3>
+<p>Please login with your username and password below.</p>
+<mat-dialog-content>
+    <form [formGroup]="loginForm">
+        <mat-form-field class="basic-input">
+            <mat-label>Email</mat-label>
+            <input matInput formControlName="email" />
+        </mat-form-field>
+        <mat-form-field class="basic-input">
+            <mat-label>Password</mat-label>
+            <input matInput formControlName="password" />
+        </mat-form-field>
     </form>
-  </div>
+</mat-dialog-content>
+<mat-dialog-actions>
+    <button mat-button (click)="cancel()">Cancel</button>
+    <button mat-button cdkFocusInitial (click)="onLogin()">Login</button>
+</mat-dialog-actions> 
