--- a/you-kan.UI/ClientApp/src/app/user-management/components/users/users-detail.component.html
+++ b/you-kan.UI/ClientApp/src/app/user-management/components/users/users-detail.component.html
@@ -1,25 +1,29 @@
-<h3 mat-dialog-title>Create New User</h3>
-<mat-dialog-content>
-    <form [formGroup]="userForm">
-        <mat-form-field class="basic-input">
-            <mat-label>First Name</mat-label>
-            <input matInput formControlName="first-name" />
-        </mat-form-field>
-        <mat-form-field class="basic-input">
-            <mat-label>Last Name</mat-label>
-            <input matInput formControlName="last-name" />
-        </mat-form-field>
-        <mat-form-field class="basic-input">
-            <mat-label>Email</mat-label>
-            <input matInput formControlName="email" />
-        </mat-form-field>
-        <mat-form-field class="basic-input">
-            <mat-label>Password</mat-label>
-            <input matInput formControlName="password" />
-        </mat-form-field>
-    </form>
-</mat-dialog-content>
-<mat-dialog-actions>
-    <button mat-button (click)="cancel()">Cancel</button>
-    <button mat-button cdkFocusInitial (click)="submit()">Create</button>
-</mat-dialog-actions> 
+<div class="edit-user">
+    <h4>Edit {{user.first_name}} {{user.last_name}}</h4>
+</div>
+<mat-card>
+    <mat-card-content class="user-details">
+        <div>
+            <form [formGroup]="userForm">
+                <mat-form-field class="basic-input">
+                    <mat-label>First Name</mat-label>
+                    <input matInput formControlName="first_name">
+                </mat-form-field>
+                <mat-form-field class="basic-input">
+                    <mat-label>Last Name</mat-label>
+                    <input matInput formControlName="last_name">
+                </mat-form-field>
+                <mat-form-field class="basic-input">
+                    <mat-label>Email</mat-label>
+                    <input matInput formControlName="email">
+                </mat-form-field>
+            </form>
+            </div>
+
+        <div class="actions-bar">
+            <button mat-raised-button color="primary" type="submit" (click)="onSubmit()"
+                [disabled]="userForm.invalid">Save</button>
+            <button mat-button type="button" (click)="onCancel()">Cancel</button>
+        </div>
+    </mat-card-content>
+</mat-card>
