attempting to hook up all forms and crud operations to our backend and remove client side test data

--- a/you-kan.UI/ClientApp/src/app/task-board/task-board.component.html
+++ b/you-kan.UI/ClientApp/src/app/task-board/task-board.component.html
@@ -7,7 +7,7 @@
         <div cdkDropList [cdkDropListData]="statusList.tasks" (cdkDropListDropped)="onTaskDropped($event, statusList)">
             <app-column [status]="statusList.status" [tasks]="statusList.tasks">
                 @for(task of statusList.tasks; track task.task_title) {
-                <app-task-card cdkDrag [task]="task"></app-task-card>
+                <app-task-card (taskEdited)="updateTask(task)" (taskDeleted)="deleteTask(task)" cdkDrag [task]="task"></app-task-card>
                 }
             </app-column>
         </div>
