--- a/you-kan.UI/ClientApp/src/app/taskboard-action-bar/taskboard-action-bar.component.html
+++ b/you-kan.UI/ClientApp/src/app/taskboard-action-bar/taskboard-action-bar.component.html
@@ -3,13 +3,14 @@
     <mat-form-field>
       <mat-label>Choose project</mat-label>
       <mat-select formControlName="project" (selectionChange)="onProjectChange($event)">
+        <mat-option value="null">---</mat-option>
         @for (project of projects; track project) {
         <mat-option [value]="project.project_id">{{project.project_name}}</mat-option>
         }
       </mat-select>
     </mat-form-field>
   </form>
-  <button mat-fab extended (click)="openTaskDetail()">
+  <button mat-fab extended [disabled]="selectedProjectId == null" (click)="addNewTask()">
     <mat-icon>add</mat-icon>
     Task
   </button>
