--- a/you-kan.UI/ClientApp/src/app/tasks/components/task-detail/task-detail.component.html
+++ b/you-kan.UI/ClientApp/src/app/tasks/components/task-detail/task-detail.component.html
@@ -56,12 +56,10 @@
             <mat-form-field class="basic-input">
                 <mat-label>Effort</mat-label>
                 <mat-select formControlName="effort">
-                    <mat-option value="null">---</mat-option>
-                    <mat-option>1</mat-option>
-                    <mat-option>2</mat-option>
-                    <mat-option>3</mat-option>
-                    <mat-option>4</mat-option>
-                    <mat-option>5</mat-option>
+                    <mat-option [value]="null">---</mat-option>
+                    @for (effort of taskEfforts; track effort) {
+                        <mat-option [value]="effort">{{effort}}</mat-option>
+                    }
                 </mat-select>
             </mat-form-field>
         </form>
