more back end hook up and refactoring apis

--- a/you-kan.UI/ClientApp/src/app/taskboard-action-bar/taskboard-action-bar.component.html
+++ b/you-kan.UI/ClientApp/src/app/taskboard-action-bar/taskboard-action-bar.component.html
@@ -20,8 +20,8 @@
         <mat-label>Filter by sprint</mat-label>
         <mat-select formControlName="sprint">
           <mat-option [value]=null>---</mat-option>
-          @for (sprint of sprints; track sprint.id) {
-          <mat-option [value]="sprint.id">{{sprint.name}}</mat-option>
+          @for (sprint of sprintsForProject(); track sprint.sprint_id) {
+          <mat-option [value]="sprint.sprint_id">{{sprint.sprint_name}}</mat-option>
           }
         </mat-select>
       </mat-form-field>
@@ -38,8 +38,8 @@
         <mat-label>Filter by assignee</mat-label>
         <mat-select formControlName="assignee">
           <mat-option [value]=null>---</mat-option>
-          @for (assignee of assignees; track assignee.id) {
-          <mat-option [value]="assignee.id">{{assignee.name}}</mat-option>
+          @for (user of usersForProject(); track user.user_id) {
+          <mat-option [value]="user.user_id">{{user.first_name}} {{user.last_name}}</mat-option>
           }
         </mat-select>
       </mat-form-field>
