--- a/you-kan.UI/ClientApp/src/app/tasks/components/task-card/task-card.component.css
+++ b/you-kan.UI/ClientApp/src/app/tasks/components/task-card/task-card.component.css
@@ -1,8 +1,12 @@
 .card-style {
     display: flex;
     flex: 1;
-    margin-bottom: 0px;
+    margin-bottom: 10px;
+    /*margin: 0px;*/
     width: 200px;
+    overflow-y: hidden!important;
+    overflow-y: hidden!important;
+
 }
 
 .bug-style {
