--- a/you-kan.UI/ClientApp/src/app/home/home.component.css
+++ b/you-kan.UI/ClientApp/src/app/home/home.component.css
@@ -1,38 +1,24 @@
+.basic-input {
+  padding:5px;
+}
+
+.desc-input{
+  padding: 5px;
+  width: 430px;
+}
+
+.dialog {
+  height: 700px;
+  width: 700px;
+
+}
+
 :host {
-    display: flex;
-    flex: 1;
-    flex-direction: column;
-    width: 100%;
-    height: 100%;
-  }
-  
-  mat-sidenav-container {
-    flex: 1;
-    width: 100%;
-    height: 100%;
-  }
-  
-  mat-sidenav-content {
-    display: flex;
-    flex-direction: column;
-  }
-  
-    .side-nav-detail {
-      border-right-color: beige;
-      max-width: 150px;
-      padding-top: 50px;
-    }
-  
-    .toolbar {
-      padding: 15px;
-      background-image: linear-gradient(to left, rgba(255,0,0,0), rgb(64, 4, 117));
-      ; 
-    } 
-  
-    .toolbar-actions {
-      display: flex;
-      justify-content: flex-end;
-      width: 100%;
-      gap: 5px;
-    }
-  
+  padding-top: 30px;
+}
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
