more refactoring and tweaking and bug fixes

--- a/you-kan.UI/ClientApp/src/app/column/column.component.html
+++ b/you-kan.UI/ClientApp/src/app/column/column.component.html
@@ -2,7 +2,7 @@
     <div class="column-title">
         <p>{{ status }}</p>
     </div>
-    <div>
-        <ng-content ></ng-content>
+    <div class="column-inner-content">
+        <ng-content></ng-content>
     </div>
 </div>
