--- a/you-kan.UI/ClientApp/src/app/column/column.component.css
+++ b/you-kan.UI/ClientApp/src/app/column/column.component.css
@@ -16,19 +16,8 @@
     font-weight: 400;
 }
 
-/* .column {
-    display: flex;
-    flex-direction: column;
-    column-gap: 5px;
-    flex-grow: 1;
-    flex-basis: 0;
-    height: 100%;
-    gap: 5px;
-
-    background-color: rgba(255, 255, 255, 0.05);
-
-    width: 225px;
-    margin: 5px;
-    padding: 10px;
-    border-radius: 10px;
-  } */
+.column-inner-content {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
