--- a/you-kan.UI/ClientApp/src/app/dashboard/dashboard.component.html
+++ b/you-kan.UI/ClientApp/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar class="toolbar" color="primary">
+<mat-toolbar *ngIf="isLoggedIn" class="toolbar" color="primary">
     <mat-toolbar-row>
         <h4><img src="assets/images/youkan-transparent.png" height="175px" width="115px"></h4>
         <div class="toolbar-actions">
@@ -13,13 +13,11 @@
 </mat-toolbar>
     <mat-sidenav-container>
         <!-- Left sidenav -->
-        <mat-sidenav mode="side" opened class="side-nav-detail">
+        <mat-sidenav *ngIf="isLoggedIn" mode="side" opened class="side-nav-detail">
             <mat-nav-list>
                 <li><a routerLink="/task-board" mat-button>Task Board</a></li>
                 <li><a routerLink="/projects" mat-button>Projects</a></li>
                 <li><a routerLink="/users" mat-button>Users</a></li>
-                <!--<li><a routerLink="/login" mat-button>Login</a></li>-->
-                <!--<li><a routerLink="/sign-up" mat-button>Sign Up</a></li>-->
             </mat-nav-list>
         </mat-sidenav>
 
