refactoring, consolidate imports, remove unused imports

--- a/you-kan.UI/ClientApp/src/app/user-management/components/users/users.component.html
+++ b/you-kan.UI/ClientApp/src/app/user-management/components/users/users.component.html
@@ -38,7 +38,7 @@
   ></tr>
 </table>
 
-<app-users-detail *ngIf="selectedUser" [@detailExpand] [user]="selectedUser" (save)="saveUpdate($event)"
+<app-user-detail *ngIf="selectedUser" [@detailExpand] [user]="selectedUser" (save)="saveUpdate($event)"
   (cancel)="cancelEdit()">
-</app-users-detail>
+</app-user-detail>
   
