--- a/you-kan.UI/ClientApp/src/app/home/home.component.css
+++ b/you-kan.UI/ClientApp/src/app/home/home.component.css
@@ -2,19 +2,12 @@
   padding:5px;
 }
 
-.desc-input{
-  padding: 5px;
-  width: 430px;
-}
-
-.dialog {
-  height: 700px;
-  width: 700px;
-
-}
-
 .logo {
   display: block;
   margin-left: auto;
   margin-right: auto;
+}
+
+.logo-header {
+  margin: -30px;
 }
