--- a/you-kan.UI/ClientApp/src/app/home/home.component.html
+++ b/you-kan.UI/ClientApp/src/app/home/home.component.html
@@ -1,11 +1,10 @@
-<div class="header">
-<h2><img src="assets/images/youkan-transparent.png" class="logo" height="350px" width="350px"></h2>
+<div class="logo-header">
+  <h2><img src="assets/images/youkan-transparent.png" class="logo" height="350px" width="350px"></h2>
 </div>
 
 <div *ngIf="showForm">
-<mat-dialog-content>
-    <h3 style="text-align: center;" mat-dialog-title>Sign Up</h3>
-    <p style="text-align: center;">** Please note that your email will be your username going forward!</p>
+  <h4 style="text-align: center;">Sign Up</h4>
+  <p style="text-align: center;">** Please note that your email will be your username going forward!</p>
   <form align="center" [formGroup]="userForm">
     <mat-form-field class="basic-input">
       <mat-label>First Name</mat-label>
@@ -29,18 +28,14 @@
       <mat-error *ngIf="userForm.get('password')?.hasError('required')">Password is required.</mat-error>
     </mat-form-field>
   </form>
-</mat-dialog-content>
-<div mat-dialog-actions align="center">
   <button mat-button cdkFocusInitial (click)="submit()">Sign Up</button>
-</div>
-<p style="text-align: center;"><a href="#" (click)="toggleForm($event)">I already have an account!</a></p>
+  <p style="text-align: center;"><a href="#" (click)="toggleForm($event)">I already have an account!</a></p>
 </div>
 
 
 <div *ngIf="!showForm">
-<mat-dialog-content>
-<h3 style="text-align: center;" mat-dialog-title>Login</h3>
-<p style="text-align: center;">Please login with your email and password below.</p>
+  <h4 style="text-align: center;">Login</h4>
+  <p style="text-align: center;">Please login with your email and password below.</p>
   <form align="center" [formGroup]="loginForm">
     <mat-form-field class="basic-input">
       <mat-label>Email</mat-label>
@@ -54,11 +49,8 @@
       <mat-error *ngIf="loginForm.get('password')?.hasError('required')">Password is required.</mat-error>
     </mat-form-field>
   </form>
-</mat-dialog-content>
-<div mat-dialog-actions align="center">
-  <button mat-button cdkFocusInitial (click)="onLogin()">Login</button>
+  <div align="center">
+    <button mat-button cdkFocusInitial (click)="onLogin()">Login</button>
+    <p style="text-align: center;"><a href="#" (click)="toggleForm($event)">Don't have an account?</a></p>
+  </div>
 </div>
-<p style="text-align: center;"><a href="#" (click)="toggleForm($event)">Don't have an account?</a></p>
-</div>
-
-
