--- a/you-kan.UI/ClientApp/src/app/home/home.component.html
+++ b/you-kan.UI/ClientApp/src/app/home/home.component.html
@@ -31,7 +31,7 @@
   </form>
 </mat-dialog-content>
 <div mat-dialog-actions align="center">
-  <button mat-button cdkFocusInitial (click)="submit()">Sign Up</button>
+  <button mat-button cdkFocusInitial (click)="onSignUp()">Sign Up</button>
 </div>
 <p style="text-align: center;"><a href="#" (click)="toggleForm($event)">I already have an account!</a></p>
 </div>
