--- a/you-kan.UI/ClientApp/src/app/user-management/components/users/users.component.html
+++ b/you-kan.UI/ClientApp/src/app/user-management/components/users/users.component.html
@@ -1,4 +1,4 @@
-<h3>Users</h3>
+<h3>Current System Users</h3>
 <div>
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 user-table">
     <!-- First Name Column -->
@@ -18,19 +18,6 @@
       <th mat-header-cell *matHeaderCellDef>Email</th>
       <td mat-cell *matCellDef="let user">{{user.email}}</td>
     </ng-container>
-  
-   <!-- Actions Column -->
-   <ng-container matColumnDef="actions">
-    <th mat-header-cell *matHeaderCellDef>Actions</th>
-    <td mat-cell *matCellDef="let element">
-      <button mat-icon-button color="primary" (click)="editUser(element)">
-        <mat-icon>edit</mat-icon>
-      </button>
-      <button mat-icon-button color="warn" (click)="deleteUser(element)">
-        <mat-icon>delete</mat-icon>
-      </button>
-    </td>
-  </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayColumns"></tr>
   <tr
