--- a/you-kan.UI/ClientApp/src/app/dashboard/dashboard.component.html
+++ b/you-kan.UI/ClientApp/src/app/dashboard/dashboard.component.html
@@ -18,6 +18,7 @@
                 <li><a routerLink="/task-board" mat-button>Task Board</a></li>
                 <li><a routerLink="/projects" mat-button>Projects</a></li>
                 <li><a routerLink="/users" mat-button>Users</a></li>
+                <li><a routerLink="/logout" mat-button>Logout</a></li>
             </mat-nav-list>
         </mat-sidenav>
 
