--- a/you-kan.UI/ClientApp/src/app/user-management/components/users/users.component.html
+++ b/you-kan.UI/ClientApp/src/app/user-management/components/users/users.component.html
@@ -19,6 +19,21 @@
       <td mat-cell *matCellDef="let user">{{user.email}}</td>
     </ng-container>
 
+       <!-- Actions Column -->
+   <ng-container matColumnDef="actions">
+    <th mat-header-cell *matHeaderCellDef>Actions</th>
+    <td mat-cell *matCellDef="let user">
+      <div *ngIf="currentUserId === user.user_id">
+      <button mat-icon-button color="primary" (click)="editUser(user)">
+        <mat-icon>edit</mat-icon>
+      </button>
+      <button mat-icon-button color="warn" (click)="deleteUser(user)">
+        <mat-icon>delete</mat-icon>
+      </button>
+    </div>
+    </td>
+  </ng-container>
+
   <tr mat-header-row *matHeaderRowDef="displayColumns"></tr>
   <tr
       mat-row
