--- a/you-kan.UI/ClientApp/src/app/dashboard/user-icon/user-icon.component.css
+++ b/you-kan.UI/ClientApp/src/app/dashboard/user-icon/user-icon.component.css
@@ -1,26 +1,25 @@
-:host {
-    display: flex;
-    flex-direction: column;
-    flex: 1;
-    width: 100%;
-    height: 100%;
-  }
-  
-  .user-table {
-    width: 100%;
-  }
-  
-  .mat-column-actions {
-    width: 120px;
-    text-align: center;
-  }
-  
-  th {
-    font-size: 16px;
-  }
-  
-  .table-toolbar {
-    width: 100%;
-    height: 100px;
-  }
-  
+.header {
+  font:bold;
+  text-align: center;
+  padding: 10px;
+}
+
+.mat-dialog-content {
+  position: relative;
+  box-shadow: black;
+  box-sizing: border-box;
+  border-radius: 8px;
+}
+
+h3 {
+  text-align: center;
+}
+
+.name {
+  text-align: center;
+}
+
+.email {
+  text-align: center;
+  padding-bottom: 10px;
+}
