adding assignee avatar, fix for project being null causing errors

--- a/you-kan.UI/ClientApp/src/app/tasks/components/task-card/task-card.component.css
+++ b/you-kan.UI/ClientApp/src/app/tasks/components/task-card/task-card.component.css
@@ -3,6 +3,15 @@
     flex: 1;
 }
 
-.bug-style {
-    outline-color: red;
-}
+.avatar {
+    background-color: #280991; 
+    padding: 2px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius:100%;
+    width:30px;
+    height: 30px;
+    font-weight: 400;
+    align-self: flex-end;
+  }
