--- a/you-kan.UI/ClientApp/src/app/taskboard-action-bar/taskboard-action-bar.component.html
+++ b/you-kan.UI/ClientApp/src/app/taskboard-action-bar/taskboard-action-bar.component.html
@@ -3,7 +3,7 @@
     <mat-form-field>
       <mat-label>Choose project</mat-label>
       <mat-select formControlName="project" (selectionChange)="onProjectChange($event)">
-        <mat-option value="null">---</mat-option>
+        <mat-option value=null>---</mat-option>
         @for (project of projects; track project) {
         <mat-option [value]="project.project_id">{{project.project_name}}</mat-option>
         }
