--- a/you-kan.UI/ClientApp/src/app/tasks/components/task-card/task-card.component.html
+++ b/you-kan.UI/ClientApp/src/app/tasks/components/task-card/task-card.component.html
@@ -1,16 +1,21 @@
 <mat-card cdkDrag class="card-style" appearance="outlined">
-    <mat-card-header style="padding-bottom: 5px;">
-      <mat-card-title>{{ task.task_title }}</mat-card-title>
-        <mat-icon *ngIf="taskIsBug()" style="padding-left: 50px;">pest_control</mat-icon>
-    </mat-card-header>
-    <mat-card-content>
-        <p style="margin-bottom: -3px;">Effort: {{ task.effort }}</p>
-        <p style="margin-bottom: -6px;">Priority: {{ task.priority }}</p>
-    </mat-card-content>
-    <mat-card-actions style="padding-bottom: -5px">
-      <button mat-icon-button (click)="deleteTask(task)">
-        <mat-icon>delete</mat-icon>
+  <mat-card-header style="padding-bottom: 5px;">
+    <mat-card-title>{{ task.task_title }}</mat-card-title>
+    <mat-icon *ngIf="taskIsBug()" style="padding-left: 50px;">pest_control</mat-icon>
+  </mat-card-header>
+  <mat-card-content>
+    <p style="margin-bottom: -3px;">Effort: {{ task.effort }}</p>
+    <p style="margin-bottom: -6px;">Priority: {{ task.priority }}</p>
+  </mat-card-content>
+  <mat-card-actions style="padding-bottom: -5px; display:flex;">
+    <button style="padding-right: 40px;" mat-icon-button (click)="deleteTask(task)">
+      <mat-icon>delete</mat-icon>
     </button>
-      <button mat-button (click)="editDetail(task)">Details</button>
-    </mat-card-actions>
-  </mat-card>
+    <button mat-button (click)="editDetail(task)">Details</button>
+    <div *ngIf="this.task.assignee_id" style="padding-left: 50px;">
+      <div class="avatar">
+        {{ getUserInitials(taskUser) }}
+      </div>
+    </div>
+  </mat-card-actions>
+</mat-card>
