bug fixes, enhancements, wrap up comment functionality

--- a/you-kan.UI/ClientApp/src/app/task-board/task-board.component.html
+++ b/you-kan.UI/ClientApp/src/app/task-board/task-board.component.html
@@ -1,14 +1,21 @@
 <app-taskboard-action-bar (projectChanged)="handleProjectChange($event)"
     (taskboardFiltersChanged)="handleFiltersChange($event)"
     (taskCreated)="handleTaskCreated($event)"
-    (projectUsers)="setProjectUsers($event)"></app-taskboard-action-bar>
+    (projectUsers)="setProjectUsers($event)"
+    (projectSprints)="setProjectSprints($event)"></app-taskboard-action-bar>
 <div class="taskboard-wrapper">
     <div cdkDropListGroup class="status-columns">
         @for (statusList of allTasksByStatus(); track statusList.status) {
         <div cdkDropList [cdkDropListData]="statusList.tasks" (cdkDropListDropped)="onTaskDropped($event, statusList)">
             <app-column [status]="statusList.status" [tasks]="statusList.tasks">
                 @for(task of statusList.tasks; track task.task_title) {
-                <app-task-card [usersForProject]="currentProjectUsers" (taskEdited)="updateTask(task)" (taskDeleted)="deleteTask(task)" cdkDrag [task]="task"></app-task-card>
+                <app-task-card 
+                [usersForProject]="currentProjectUsers"
+                [sprintsForProject]="currentProjectSprints" 
+                (taskEdited)="updateTask(task)" 
+                (taskDeleted)="deleteTask(task)" 
+                cdkDrag [task]="task">
+            </app-task-card>
                 }
             </app-column>
         </div>
