fixes for assignee user update, get initials

--- a/you-kan.UI/ClientApp/src/app/task-board/task-board.component.html
+++ b/you-kan.UI/ClientApp/src/app/task-board/task-board.component.html
@@ -12,7 +12,7 @@
                 <app-task-card 
                 [usersForProject]="currentProjectUsers"
                 [sprintsForProject]="currentProjectSprints" 
-                (taskEdited)="updateTask(task)" 
+                (taskEdited)="updateTask($event)" 
                 (taskDeleted)="deleteTask(task)" 
                 cdkDrag [task]="task">
             </app-task-card>
