4 avatar colors, other small styling changes

--- a/you-kan.UI/ClientApp/src/app/projects/components/project-detail/project-detail.component.html
+++ b/you-kan.UI/ClientApp/src/app/projects/components/project-detail/project-detail.component.html
@@ -33,7 +33,7 @@
 
         <div>
             <div class="sprints-header">
-                <p style="font-size:large;padding-top:5px;">Sprints:</p>
+                <p class="sprints-title">Sprints:</p>
                 <button mat-icon-button (click)="addSprint()">
                     <mat-icon>add</mat-icon>
                 </button>
