--- a/you-kan.UI/ClientApp/src/app/tasks/components/task-card/task-card.component.html
+++ b/you-kan.UI/ClientApp/src/app/tasks/components/task-card/task-card.component.html
@@ -13,7 +13,7 @@
     </button>
     <button mat-button (click)="editDetail(task)">Details</button>
     <div *ngIf="this.task.assignee_user_id" style="padding-left: 50px;">
-      <div class="avatar">
+      <div [style.background-color]="getAvatarColor(task.assignee_user_id)" class="avatar">
         {{ assigneeInitials() }}
       </div>
     </div>
