refresh sprints in proj list on sprint crud

--- a/you-kan.UI/ClientApp/src/app/projects/components/project-detail/project-detail.component.css
+++ b/you-kan.UI/ClientApp/src/app/projects/components/project-detail/project-detail.component.css
@@ -35,7 +35,7 @@
 .sprints-title {
   font-size:large;
   padding-top:5px;
-  color:rgb(195, 122, 231);
+  color:#ffabf3;
   font-weight: bold;
 
 }
