--- a/you-kan.UI/ClientApp/src/app/projects/components/project-detail/project-detail.component.html
+++ b/you-kan.UI/ClientApp/src/app/projects/components/project-detail/project-detail.component.html
@@ -35,7 +35,7 @@
             <div class="sprints-header">
                 <p class="sprints-title">Sprints:</p>
                 <button mat-icon-button (click)="addSprint()">
-                    <mat-icon>add</mat-icon>
+                    <mat-icon color="primary">add</mat-icon>
                 </button>
             </div>
             <mat-list>
